array.island.Island.scala.error
Erreur de compilation :
Island:7: error: not found: value nieau
      niveau=nieau+1
             ^