array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var max=0
  var niveau=0
  for (x <- num){
    if (x>max){
      niveau=nieau+1
    }
  }
  return niveau
}